image added in grid

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <img src="/gallery/IMG_20190621_080615.jpg" alt="Field work - 21 June 2019">
         <img src="/gallery/IMG_20190619_114121.jpg" alt="Site inspection - 19 June 2019">
         <img src="/gallery/IMG_20190619_193645.jpg" alt="Evening work - 19 June 2019">
+        <img src="/gallery/telescope.jpg" alt="Evening work - 19 June 2019">
       </div>
     </section>
     <section id="portfolio" class="section-portfolio">
