refined minimilastic changes

--- a/index.html
+++ b/index.html
@@ -1,48 +1,58 @@
-<!--
-  Personal Resume Website
-  Optimized for GitHub Pages (static, all assets relative, no server-side code)
--->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Personal resume website for Giridhar Koirala. Download resume, view projects, and contact.">
-  <!-- For GitHub Pages: ensure all links are relative and no server-side code is used -->
-  <title>Giridhar Koirala - Resume</title>
+  <meta name="title" content="Specialized in Water Resources, Bridge Design, Geo Surveying & Civil Engineering">
+  <meta name="description"
+    content="Expertise in Water Resources Engineering, Bridge Design, Geo Surveying, and comprehensive Civil Engineering services. Delivering innovative, data-driven infrastructure solutions.">
+  <meta name="keywords"
+    content="Water Resources, Bridge Design, Geo Surveying, Civil Engineering, Infrastructure Design, Engineering Services, Structural Engineering">
+  <meta name="author" content="Giridhar Koirala, Civil Engineer, Water Researcher">
+  <meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Giridhar Koirala</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="cover-photo">
     <img src="cover.jpg" alt="Cover Photo">
   </div>
-  <header>
-    <div class="header-content header-flex">
-      <img src="photo.jpg" alt="Profile Photo" class="profile-photo-header">
-      <div>
-        <h1 id="name">Giridhar Koirala</h1>
-        <nav class="main-nav">
-          <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#gallery">Gallery</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#training">Training</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-      <div class="header-actions">
+
+  <main>
+    <nav>
+      <div class="logo">Mr.Gree</div>
+      <div class="header-top">
         <button id="download-resume">Download Resume</button>
         <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
       </div>
-    </div>
-  </header>
-  <main>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="hero">
+      <!-- Left content -->
+      <div class="hero-text">
+        <p>Specialized in Water Resources, Bridge Design, Geo Surveying and civil Engineering practices.</p>
+        <a class="availability-btn" href="#contact">
+          I am available
+          <span>→</span>
+        </a>
+        <h1>I AM Mr.Gree</h1>
+      </div>
+
+      <!-- Right content -->
+      <div class="hero-image">
+        <img src="photo.jpg" alt="Mr. Shomikuite" />
+      </div>
+    </section>
     <section id="about" class="section-about">
       <h2>About</h2>
-      <p>Experienced Civil Engineer and Water Resources Student with a strong background in hydrological studies, engineering design, and project management. Skilled in modern software, field investigations, and technical reporting.</p>
+      <p>Experienced Civil Engineer and Water Resources Student with a strong background in hydrological studies,
+        engineering design, and project management. Skilled in modern software, field investigations, and technical
+        reporting.</p>
     </section>
     <section id="gallery" class="section-gallery">
       <h2>Gallery</h2>
@@ -57,8 +67,10 @@
       <h2>Portfolio</h2>
       <h3>Summary of Activities</h3>
       <ul>
-        <li>Conducted soil investigations, hydrological studies, and detailed drawings for bridges, roads, and river sections, including detailed engineering surveys.</li>
-        <li>Prepared field, preliminary, draft, and final reports and cost estimations for bridges (RCC T-Girder, PSC, Arch, Truss), parks, and roadways.</li>
+        <li>Conducted soil investigations, hydrological studies, and detailed drawings for bridges, roads, and river
+          sections, including detailed engineering surveys.</li>
+        <li>Prepared field, preliminary, draft, and final reports and cost estimations for bridges (RCC T-Girder, PSC,
+          Arch, Truss), parks, and roadways.</li>
         <li>Prepared pre-tender and contract documents and presented projects at various levels.</li>
       </ul>
       <h3>Skills</h3>
@@ -84,44 +96,61 @@
         <div class="project-card">
           <h3>Project Management System with Smart Estimation</h3>
           <p><strong>Company:</strong> Data Construct Pvt. Ltd.<br>
-          <strong>Organizer:</strong> Er. Ashok Basnet (Director, Data Construct Pvt. Ltd.)</p>
-          <p>AI powered Software Product development for project management system with integrated rate analysis and cost estimation sheets for governmental agencies.</p>
+            <strong>Organizer:</strong> Er. Ashok Basnet (Director, Data Construct Pvt. Ltd.)
+          </p>
+          <p>AI powered Software Product development for project management system with integrated rate analysis and
+            cost estimation sheets for governmental agencies.</p>
         </div>
         <div class="project-card">
-          <h3>Detailed Design of Upgradation of Kamala-Dhalkebar-Pathlaiya Road Section (130km) of Mahendra Highway and Bridges (SRCTIP)</h3>
+          <h3>Detailed Design of Upgradation of Kamala-Dhalkebar-Pathlaiya Road Section (130km) of Mahendra Highway and
+            Bridges (SRCTIP)</h3>
           <p><strong>Duration:</strong> March 2023- Jan 2024<br>
-          <strong>Location:</strong> Mahendra Highway Kamala-Pathlaiya Section<br>
-          <strong>Client:</strong> International Consultant: (EPTISA-STUP JV)<br>
-          <strong>Position Held:</strong> Civil Engineer</p>
+            <strong>Location:</strong> Mahendra Highway Kamala-Pathlaiya Section<br>
+            <strong>Client:</strong> International Consultant: (EPTISA-STUP JV)<br>
+            <strong>Position Held:</strong> Civil Engineer
+          </p>
         </div>
         <div class="project-card">
-          <h3>Feasibility Study, Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design of Bridges at Raji Khola along Tulsipur-Purandhara-Botechour Road (NH19)</h3>
+          <h3>Feasibility Study, Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design
+            of Bridges at Raji Khola along Tulsipur-Purandhara-Botechour Road (NH19)</h3>
           <p><strong>Duration:</strong> July 2023- March 2024<br>
-          <strong>Location:</strong> Dang<br>
-          <strong>Client:</strong> Department of Roads, Madan Bhandari Highway Project Directorate<br>
-          <strong>Position Held:</strong> Civil Engineer</p>
+            <strong>Location:</strong> Dang<br>
+            <strong>Client:</strong> Department of Roads, Madan Bhandari Highway Project Directorate<br>
+            <strong>Position Held:</strong> Civil Engineer
+          </p>
         </div>
         <div class="project-card">
-          <h3>Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design of Maruwa Khola Motorable Bridge at Katari Muncipality, Udayapur</h3>
+          <h3>Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design of Maruwa Khola
+            Motorable Bridge at Katari Muncipality, Udayapur</h3>
           <p><strong>Duration:</strong> June 2023- March 2024<br>
-          <strong>Location:</strong> Nepal<br>
-          <strong>Client:</strong> Ministry of Road Infrastructure & Urban Development, Transport Infrastructure Directorate, Infrastructure Development Office (IDO)<br>
-          <strong>Position Held:</strong> Civil Engineer</p>
+            <strong>Location:</strong> Nepal<br>
+            <strong>Client:</strong> Ministry of Road Infrastructure & Urban Development, Transport Infrastructure
+            Directorate, Infrastructure Development Office (IDO)<br>
+            <strong>Position Held:</strong> Civil Engineer
+          </p>
         </div>
         <div class="project-card">
-          <h3>Feasibility Study, Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design of Bridge, Satbise Dihi Pakki Pul, Sunkoshi 5, Sindhuli</h3>
+          <h3>Feasibility Study, Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design
+            of Bridge, Satbise Dihi Pakki Pul, Sunkoshi 5, Sindhuli</h3>
           <p><strong>Duration:</strong> May 2023- March 2024<br>
-          <strong>Location:</strong> Nepal<br>
-          <strong>Client:</strong> Ministry of Road Infrastructure & Urban Development, Transport Infrastructure Directorate, Infrastructure Development Office (IDO)<br>
-          <strong>Position Held:</strong> Civil Engineer</p>
+            <strong>Location:</strong> Nepal<br>
+            <strong>Client:</strong> Ministry of Road Infrastructure & Urban Development, Transport Infrastructure
+            Directorate, Infrastructure Development Office (IDO)<br>
+            <strong>Position Held:</strong> Civil Engineer
+          </p>
         </div>
         <div class="project-card">
-          <h3>Feasibility Study, Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design of Bridges</h3>
-          <p><strong>Bridges:</strong> Dudhpokhari 2 Bichaur Langadi Khola Doban Bridge, Muge Chepenadi Sadak Pul, Fushre Khola Motorable Bridge, Sayala Khola Motorable Bridge, Seti Khola Motorable Bridge, Marang Khola Motorable Bridge, Muna Mundri Daar Khola Motorable Bridge, Adhibhara Motorable Bridge, Modi Khola Motorable Bridge<br>
-          <strong>Duration:</strong> July 2022- Jan 2024<br>
-          <strong>Location:</strong> Various<br>
-          <strong>Client:</strong> Department of Roads, Bridge Branch<br>
-          <strong>Position Held:</strong> Civil Engineer</p>
+          <h3>Feasibility Study, Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design
+            of Bridges</h3>
+          <p><strong>Bridges:</strong> Dudhpokhari 2 Bichaur Langadi Khola Doban Bridge, Muge Chepenadi Sadak Pul,
+            Fushre Khola Motorable Bridge, Sayala Khola Motorable Bridge, Seti Khola Motorable Bridge, Marang Khola
+            Motorable Bridge, Muna Mundri Daar Khola Motorable Bridge, Adhibhara Motorable Bridge, Modi Khola Motorable
+            Bridge<br>
+            <strong>Duration:</strong> July 2022- Jan 2024<br>
+            <strong>Location:</strong> Various<br>
+            <strong>Client:</strong> Department of Roads, Bridge Branch<br>
+            <strong>Position Held:</strong> Civil Engineer
+          </p>
         </div>
       </div>
     </section>
@@ -131,20 +160,24 @@
         <div class="project-card">
           <h3>Training on Hydrological Data Modelling and Analysis using SWAT Application</h3>
           <p><strong>Date:</strong> 15th June 2024 - 19th June 2024<br>
-          <strong>Trainer:</strong> Er. Nirajan Devkota (IOE, Pulchowk Campus)</p>
+            <strong>Trainer:</strong> Er. Nirajan Devkota (IOE, Pulchowk Campus)
+          </p>
           <p>Hydrological Modelling using SWAT. Calibration and validation of Hydrological model using SWAT-CUP.</p>
         </div>
         <div class="project-card">
           <h3>Glacio-Hydrologic Analysis for IMJA_ISHO using Energy Band Classification</h3>
           <p><strong>Date:</strong> 25th March 2024 - 31st May 2024<br>
-          <strong>Researcher:</strong> Susen Shrestha (EURAC Research)</p>
+            <strong>Researcher:</strong> Susen Shrestha (EURAC Research)
+          </p>
           <p>Exploiting ERA5 Reanalysis dataset for glacio-hydro study using Energy Band Classification.</p>
         </div>
         <div class="project-card">
           <h3>Training on Water-Energy-Food Ecosystem (WEFE) Nexus</h3>
           <p><strong>Date:</strong> 2nd - 7th January 2024<br>
-          <strong>Organizers:</strong> IWMI, CIAT, CWRS, Biodiversity International, CGIAR<br>
-          <strong>Mentors:</strong> Prof. Dr. Vishnu Prasad Pandey (CWRS, IOE), Bharat Kumar Pokharel (Great International)</p>
+            <strong>Organizers:</strong> IWMI, CIAT, CWRS, Biodiversity International, CGIAR<br>
+            <strong>Mentors:</strong> Prof. Dr. Vishnu Prasad Pandey (CWRS, IOE), Bharat Kumar Pokharel (Great
+            International)
+          </p>
           <p>WEFE Nexus Capacity Building professional course.</p>
         </div>
       </div>
@@ -153,23 +186,29 @@
       <h2>Contact</h2>
       <div class="contact-links">
         <a href="mailto:koiralagreedhar@gmail.com" class="icon-link" title="Email">
-          <svg width="28" height="28" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><rect x="2" y="4" width="20" height="16" rx="2"/><polyline points="22,6 12,13 2,6"/></svg>
+          <svg width="28" height="28" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+            stroke-linejoin="round" viewBox="0 0 24 24">
+            <rect x="2" y="4" width="20" height="16" rx="2" />
+            <polyline points="22,6 12,13 2,6" />
+          </svg>
           koiralagreedhar@gmail.com
         </a>
-        <a href="https://www.linkedin.com/in/giridhar-koirala-6905791aa" class="icon-link" target="_blank" title="LinkedIn">
-          <svg width="28" height="28" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><rect x="2" y="2" width="20" height="20" rx="5"/><line x1="16" y1="11" x2="16" y2="16"/><line x1="12" y1="11" x2="12" y2="16"/><line x1="8" y1="11" x2="8" y2="16"/><circle cx="8" cy="8" r="1"/></svg>
+        <a href="https://www.linkedin.com/in/giridhar-koirala-6905791aa" class="icon-link" target="_blank"
+          title="LinkedIn">
+          <svg width="28" height="28" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+            stroke-linejoin="round" viewBox="0 0 24 24">
+            <rect x="2" y="2" width="20" height="20" rx="5" />
+            <line x1="16" y1="11" x2="16" y2="16" />
+            <line x1="12" y1="11" x2="12" y2="16" />
+            <line x1="8" y1="11" x2="8" y2="16" />
+            <circle cx="8" cy="8" r="1" />
+          </svg>
           LinkedIn
         </a>
       </div>
-      <form id="contact-form" novalidate>
-        <input type="text" id="name-input" name="name" placeholder="Your Name" required>
-        <input type="email" id="email-input" name="email" placeholder="Your Email" required>
-        <textarea id="message-input" name="message" placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-        <div id="form-message"></div>
-      </form>
     </section>
   </main>
   <script src="script.js"></script>
 </body>
-</html> 
+
+</html>
