--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" content="Specialized in Water Resources, Bridge Design, Geo Surveying & Civil Engineering">
+  <meta name="title" content="Specialized in Geo-Spatial Techniques, Bridge Design, Geo Surveying & Civil Engineering">
   <meta name="description"
     content="Expertise in Water Resources Engineering, Bridge Design, Geo Surveying, and comprehensive Civil Engineering services. Delivering innovative, data-driven infrastructure solutions.">
   <meta name="keywords"
