--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <main>
     <nav>
-      <div class="logo">Mr.Gree</div>
+      <div class="logo">Mr.Giridhar Koirala</div>
       <div class="header-top">
         <button id="download-resume">Download Resume</button>
         <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
@@ -35,7 +35,7 @@
     <section class="hero">
       <!-- Left content -->
       <div class="hero-text">
-        <p>Specialized in Water Resources, Bridge Design, Geo Surveying and civil Engineering practices.</p>
+        <p>Specialized in Geo-Spatial Techniques, Cross-Drainage Design, Geo Surveying, and Civil Engineering practices.</p>
         <a class="availability-btn" href="#contact">
           I am available
           <span>→</span>
@@ -60,7 +60,7 @@
         <img src="/gallery/IMG_20190621_080615.jpg" alt="Field work - 21 June 2019">
         <img src="/gallery/IMG_20190619_114121.jpg" alt="Site inspection - 19 June 2019">
         <img src="/gallery/IMG_20190619_193645.jpg" alt="Evening work - 19 June 2019">
-        <img src="/gallery/telescope.jpg" alt="Evening work - 19 June 2019">
+        <img src="/gallery/telescope.jpg" alt="Remote Sensing Classics - 19 June 2019">
       </div>
     </section>
     <section id="portfolio" class="section-portfolio">
@@ -98,8 +98,8 @@
           <p><strong>Company:</strong> Data Construct Pvt. Ltd.<br>
             <strong>Organizer:</strong> Er. Ashok Basnet (Director, Data Construct Pvt. Ltd.)
           </p>
-          <p>AI powered Software Product development for project management system with integrated rate analysis and
-            cost estimation sheets for governmental agencies.</p>
+          <p> AI-powered Software Product development for project management system with integrated rate analysis and
+            Cost estimation sheets for governmental agencies.</p>
         </div>
         <div class="project-card">
           <h3>Detailed Design of Upgradation of Kamala-Dhalkebar-Pathlaiya Road Section (130km) of Mahendra Highway and
@@ -121,7 +121,7 @@
         </div>
         <div class="project-card">
           <h3>Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design of Maruwa Khola
-            Motorable Bridge at Katari Muncipality, Udayapur</h3>
+            Motorable Bridge at Katari Municipality, Udayapur</h3>
           <p><strong>Duration:</strong> June 2023- March 2024<br>
             <strong>Location:</strong> Nepal<br>
             <strong>Client:</strong> Ministry of Road Infrastructure & Urban Development, Transport Infrastructure
