--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" content="Specialized in Geo-Spatial Techniques, Bridge Design, Geo Surveying & Civil Engineering">
+  <meta name="title" content="Specialized in Athlete Management, Sports Infrastructure & Consultancy">
   <meta name="description"
-    content="Expertise in Water Resources Engineering, Bridge Design, Geo Surveying, and comprehensive Civil Engineering services. Delivering innovative, data-driven infrastructure solutions.">
+    content="Expert in Athlete Representation, Sports Media Strategy, Infrastructure Development, and Club Analysis. Bridging civil engineering and sports consultancy to build strong careers and facilities.">
   <meta name="keywords"
-    content="Water Resources, Bridge Design, Geo Surveying, Civil Engineering, Infrastructure Design, Engineering Services, Structural Engineering">
-  <meta name="author" content="Giridhar Koirala, Civil Engineer, Water Researcher">
+    content="Athlete Management, Sports Infrastructure, Civil Engineering, Talent Development, Media Strategy, Sports Consultancy">
+  <meta name="author" content="Anish Bhandari, Sports Consultant & Engineer">
   <meta name="robots" content="index, follow">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Giridhar Koirala</title>
+  <title>Anish Bhandari</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,7 +23,7 @@
 
   <main>
     <nav>
-      <div class="logo">Mr.Giridhar Koirala</div>
+      <div class="logo">Mr. Anish Bhandari</div>
       <div class="header-top">
         <button id="download-resume">Download Resume</button>
         <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
@@ -33,170 +32,64 @@
 
     <!-- Hero Section -->
     <section class="hero">
-      <!-- Left content -->
       <div class="hero-text">
-        <p>Specialized in Geo-Spatial Techniques, Cross-Drainage Design, Geo Surveying, and Civil Engineering practices.</p>
+        <p>Passionate about Athlete Management, Sports Media, Infrastructure Design, and Club Analysis.</p>
         <a class="availability-btn" href="#contact">
           I am available
           <span>→</span>
         </a>
-        <h1>I AM Mr.Gree</h1>
+        <h1>I AM Anish Bhandari</h1>
       </div>
 
-      <!-- Right content -->
       <div class="hero-image">
-        <img src="photo.jpg" alt="Mr. Shomikuite" />
+        <img src="photo.jpg" alt="Anish Bhandari" />
       </div>
     </section>
+
     <section id="about" class="section-about">
       <h2>About</h2>
-      <p>Experienced Civil Engineer and Water Resources Student with a strong background in hydrological studies,
-        engineering design, and project management. Skilled in modern software, field investigations, and technical
-        reporting.</p>
+      <p>I’m a dedicated professional with a unique blend of experience in civil engineering and sports consultancy. I've worked on sports infrastructure projects, represented athletes, led sports agencies, and contributed to club analysis and media strategy. Currently, I serve as the CEO and Co-Founder of Athlete’s Media & Management, where I focus on elevating athletes' careers both on and off the field.</p>
     </section>
-    <section id="gallery" class="section-gallery">
-      <h2>Gallery</h2>
-      <div class="gallery-grid">
-        <img src="/gallery/IMG_20190621_080615.jpg" alt="Field work - 21 June 2019">
-        <img src="/gallery/IMG_20190619_114121.jpg" alt="Site inspection - 19 June 2019">
-        <img src="/gallery/IMG_20190619_193645.jpg" alt="Evening work - 19 June 2019">
-        <img src="/gallery/telescope.jpg" alt="Remote Sensing Classics - 19 June 2019">
-      </div>
-    </section>
+
     <section id="portfolio" class="section-portfolio">
       <h2>Portfolio</h2>
-      <h3>Summary of Activities</h3>
+      <h3>Professional Roles</h3>
       <ul>
-        <li>Conducted soil investigations, hydrological studies, and detailed drawings for bridges, roads, and river
-          sections, including detailed engineering surveys.</li>
-        <li>Prepared field, preliminary, draft, and final reports and cost estimations for bridges (RCC T-Girder, PSC,
-          Arch, Truss), parks, and roadways.</li>
-        <li>Prepared pre-tender and contract documents and presented projects at various levels.</li>
+        <li>CEO & Co-Founder, Athlete’s Media & Management (2023 - Present)</li>
+        <li>CEO, Athlete's Stories (2022 - Present)</li>
+        <li>Sports Consultant, Athlete's Stories</li>
+        <li>Site Engineer, Kaya Corp (2023 - Present)</li>
+        <li>Public Relations Specialist, Kaya Corp (2022 - 2025)</li>
       </ul>
-      <h3>Skills</h3>
+
+      <h3>Expertise</h3>
       <ul>
-        <li>MS software: PowerPoint, Excel, Word</li>
-        <li>Google Earth Engine, GIS, AutoCAD, Smart Road, SWAT, HEC-RAS, SAP</li>
-        <li>R, Python Programming languages</li>
-        <li>Total Station, GPS devices, SW DTM: Digital Terrain Modelling and Contouring</li>
+        <li>Athlete Representation & Branding</li>
+        <li>Sports Infrastructure & Civil Engineering</li>
+        <li>Club Analysis & Technical Reporting</li>
+        <li>Public Relations & Media Strategy</li>
       </ul>
     </section>
+
     <section id="education" class="section-education">
       <h2>Education</h2>
       <ul>
-        <li><strong>MSc. Water Resources Engineering (Thesis Remaining)</strong>: IOE, Pulchowk Campus, TU</li>
-        <li><strong>Bachelor’s degree in Civil Engineering</strong> (2022 Jun): IOE, Purwanchal Campus, TU<br>
-          <em>Dissertation: Seismic Resistant Design of Multi-Commercial Building</em>
-        </li>
+        <li><strong>Bachelor’s degree in Civil Engineering</strong>: Pokhara University (2018 - 2023)</li>
       </ul>
     </section>
-    <section id="projects" class="section-projects">
-      <h2>Projects</h2>
-      <div class="projects-grid">
-        <div class="project-card">
-          <h3>Project Management System with Smart Estimation</h3>
-          <p><strong>Company:</strong> Data Construct Pvt. Ltd.<br>
-            <strong>Organizer:</strong> Er. Ashok Basnet (Director, Data Construct Pvt. Ltd.)
-          </p>
-          <p> AI-powered Software Product development for project management system with integrated rate analysis and
-            Cost estimation sheets for governmental agencies.</p>
-        </div>
-        <div class="project-card">
-          <h3>Detailed Design of Upgradation of Kamala-Dhalkebar-Pathlaiya Road Section (130km) of Mahendra Highway and
-            Bridges (SRCTIP)</h3>
-          <p><strong>Duration:</strong> March 2023- Jan 2024<br>
-            <strong>Location:</strong> Mahendra Highway Kamala-Pathlaiya Section<br>
-            <strong>Client:</strong> International Consultant: (EPTISA-STUP JV)<br>
-            <strong>Position Held:</strong> Civil Engineer
-          </p>
-        </div>
-        <div class="project-card">
-          <h3>Feasibility Study, Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design
-            of Bridges at Raji Khola along Tulsipur-Purandhara-Botechour Road (NH19)</h3>
-          <p><strong>Duration:</strong> July 2023- March 2024<br>
-            <strong>Location:</strong> Dang<br>
-            <strong>Client:</strong> Department of Roads, Madan Bhandari Highway Project Directorate<br>
-            <strong>Position Held:</strong> Civil Engineer
-          </p>
-        </div>
-        <div class="project-card">
-          <h3>Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design of Maruwa Khola
-            Motorable Bridge at Katari Municipality, Udayapur</h3>
-          <p><strong>Duration:</strong> June 2023- March 2024<br>
-            <strong>Location:</strong> Nepal<br>
-            <strong>Client:</strong> Ministry of Road Infrastructure & Urban Development, Transport Infrastructure
-            Directorate, Infrastructure Development Office (IDO)<br>
-            <strong>Position Held:</strong> Civil Engineer
-          </p>
-        </div>
-        <div class="project-card">
-          <h3>Feasibility Study, Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design
-            of Bridge, Satbise Dihi Pakki Pul, Sunkoshi 5, Sindhuli</h3>
-          <p><strong>Duration:</strong> May 2023- March 2024<br>
-            <strong>Location:</strong> Nepal<br>
-            <strong>Client:</strong> Ministry of Road Infrastructure & Urban Development, Transport Infrastructure
-            Directorate, Infrastructure Development Office (IDO)<br>
-            <strong>Position Held:</strong> Civil Engineer
-          </p>
-        </div>
-        <div class="project-card">
-          <h3>Feasibility Study, Detailed Engineering Survey, Soil Investigation, Hydrological Study and Detailed Design
-            of Bridges</h3>
-          <p><strong>Bridges:</strong> Dudhpokhari 2 Bichaur Langadi Khola Doban Bridge, Muge Chepenadi Sadak Pul,
-            Fushre Khola Motorable Bridge, Sayala Khola Motorable Bridge, Seti Khola Motorable Bridge, Marang Khola
-            Motorable Bridge, Muna Mundri Daar Khola Motorable Bridge, Adhibhara Motorable Bridge, Modi Khola Motorable
-            Bridge<br>
-            <strong>Duration:</strong> July 2022- Jan 2024<br>
-            <strong>Location:</strong> Various<br>
-            <strong>Client:</strong> Department of Roads, Bridge Branch<br>
-            <strong>Position Held:</strong> Civil Engineer
-          </p>
-        </div>
-      </div>
-    </section>
-    <section id="training" class="section-projects">
-      <h2>Training</h2>
-      <div class="projects-grid">
-        <div class="project-card">
-          <h3>Training on Hydrological Data Modelling and Analysis using SWAT Application</h3>
-          <p><strong>Date:</strong> 15th June 2024 - 19th June 2024<br>
-            <strong>Trainer:</strong> Er. Nirajan Devkota (IOE, Pulchowk Campus)
-          </p>
-          <p>Hydrological Modelling using SWAT. Calibration and validation of Hydrological model using SWAT-CUP.</p>
-        </div>
-        <div class="project-card">
-          <h3>Glacio-Hydrologic Analysis for IMJA_ISHO using Energy Band Classification</h3>
-          <p><strong>Date:</strong> 25th March 2024 - 31st May 2024<br>
-            <strong>Researcher:</strong> Susen Shrestha (EURAC Research)
-          </p>
-          <p>Exploiting ERA5 Reanalysis dataset for glacio-hydro study using Energy Band Classification.</p>
-        </div>
-        <div class="project-card">
-          <h3>Training on Water-Energy-Food Ecosystem (WEFE) Nexus</h3>
-          <p><strong>Date:</strong> 2nd - 7th January 2024<br>
-            <strong>Organizers:</strong> IWMI, CIAT, CWRS, Biodiversity International, CGIAR<br>
-            <strong>Mentors:</strong> Prof. Dr. Vishnu Prasad Pandey (CWRS, IOE), Bharat Kumar Pokharel (Great
-            International)
-          </p>
-          <p>WEFE Nexus Capacity Building professional course.</p>
-        </div>
-      </div>
-    </section>
+
     <section id="contact" class="section-contact">
       <h2>Contact</h2>
       <div class="contact-links">
-        <a href="mailto:koiralagreedhar@gmail.com" class="icon-link" title="Email">
-          <svg width="28" height="28" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-            stroke-linejoin="round" viewBox="0 0 24 24">
+        <a href="mailto:reusmarco0001@gmail.com" class="icon-link" title="Email">
+          <svg width="28" height="28" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
             <rect x="2" y="4" width="20" height="16" rx="2" />
             <polyline points="22,6 12,13 2,6" />
           </svg>
-          koiralagreedhar@gmail.com
+          reusmarco0001@gmail.com
         </a>
-        <a href="https://www.linkedin.com/in/giridhar-koirala-6905791aa" class="icon-link" target="_blank"
-          title="LinkedIn">
-          <svg width="28" height="28" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-            stroke-linejoin="round" viewBox="0 0 24 24">
+        <a href="https://www.linkedin.com" class="icon-link" target="_blank" title="LinkedIn">
+          <svg width="28" height="28" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
             <rect x="2" y="2" width="20" height="20" rx="5" />
             <line x1="16" y1="11" x2="16" y2="16" />
             <line x1="12" y1="11" x2="12" y2="16" />
@@ -208,6 +101,7 @@
       </div>
     </section>
   </main>
+
   <script src="script.js"></script>
 </body>
 
