--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
       <p>I’m a dedicated professional with a unique blend of experience in civil engineering and sports consultancy. I've worked on sports infrastructure projects, represented athletes, led sports agencies, and contributed to club analysis and media strategy. Currently, I serve as the CEO and Co-Founder of Athlete’s Media & Management, where I focus on elevating athletes' careers both on and off the field.</p>
     </section>
 
+    <section id="gallery" class="section-gallery">
+      <h2>Gallery</h2>
+      <div class="gallery-grid">
+        <img src="gallery/1.jpg" alt="Gallery Image 1">
+        <img src="gallery/2.jpg" alt="Gallery Image 2">
+        <img src="gallery/3.jpg" alt="Gallery Image 3">
+      </div>
+    </section>
+
     <section id="portfolio" class="section-portfolio">
       <h2>Portfolio</h2>
       <h3>Professional Roles</h3>
@@ -71,6 +80,20 @@
       </ul>
     </section>
 
+    <section id="projects" class="section-projects">
+      <h2>Projects</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>Player Transfer Management</h3>
+          <p>Handled domestic, national, and international player transfers across all tier leagues.</p>
+        </div>
+        <div class="project-card">
+          <h3>Sports Infrastructure Development</h3>
+          <p>Worked on construction and consultancy for futsal courts, indoor halls, badminton courts, and other sports-related infrastructure including drainage systems and foundation works.</p>
+        </div>
+      </div>
+    </section>
+
     <section id="education" class="section-education">
       <h2>Education</h2>
       <ul>
@@ -88,7 +111,7 @@
           </svg>
           reusmarco0001@gmail.com
         </a>
-        <a href="https://www.linkedin.com" class="icon-link" target="_blank" title="LinkedIn">
+        <a href="https://www.linkedin.com/in/anish-bhandari-90644a177/" class="icon-link" target="_blank" title="LinkedIn">
           <svg width="28" height="28" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
             <rect x="2" y="2" width="20" height="20" rx="5" />
             <line x1="16" y1="11" x2="16" y2="16" />
